apps/gotify/manifests/ak-outpost-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ak-outpost-gotify
  namespace: gotify
spec:
  type: ExternalName
  externalName: ak-outpost-gotify.authentik.svc.cluster.local
  ports:
    - port: 9000
      targetPort: 9000
